Fix header alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 header {
     display: block;
     width: 100%;
-    height: 30px;
+    height: 32px;
 }
 
 body{
@@ -15,7 +15,6 @@ li {
     display: inline-block;
     padding-left: 15px;
     cursor: pointer;
-    
 }
 
 li a {
@@ -24,6 +23,7 @@ li a {
     font-size: 13px;
     text-decoration: none;
     line-height: 24px;
+    position: relative;
 }
 
 li a:hover {
@@ -31,11 +31,14 @@ li a:hover {
 }
 
 .headleft {
-    float: left;
+    position: absolute;
 }
 
 .headright {
-    float: right;
+    display: block;
+    position: absolute;
+    right: 30px;
+    top: 0px;
 }
 
 .appgrid{
@@ -108,6 +111,14 @@ li a:hover {
     height: 4px;
     width: 4px;
     grid-area: 3 / 3 / 3 / 3;
+}
+
+.profpic {
+    height: 32px;
+    width: 32px;
+    border-radius: 50%;
+    position: relative;
+    top: 12px;
 }
 
 .logo {
